--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <string name="app_title">Revl</string>
+    <string name="image_copied">Image url copied to clipboard.</string>
 
 </resources>
